--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -29,6 +29,11 @@
 </p>
 
 <p>
+  <b>Scan Folder:</b>
+  <%=h @machine.scan_folder %>
+</p>
+
+<p>
   <b>Description:</b>
   <%=h @machine.description %>
 </p>
