--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -72,7 +72,15 @@
     <%= f.text_field :prms_description_1 %>
   </p>
   
-  
+  <p>
+    <%= f.label :part_cost %><br />
+    <%= f.text_field :part_cost %>
+  </p>
+
+  <p>
+    <%= f.label :part_weight %><br />
+    <%= f.text_field :part_weight %>
+  </p>
   
   
    <p>
