--- a/app/views/bin_types/index.html.erb
+++ b/app/views/bin_types/index.html.erb
@@ -8,17 +8,17 @@
   <tr>
     <th>Name</th>
     <th>Description</th>
-	<th>Bin Barcode Format</th>
-        <th>Product Barcode Format</th>
-        <th>Action</th>
+	  <th>Maximum load</th>
+   
+    <th>Action</th>
   </tr>
 
 <% @bin_types.each do |bin_type| %>
   <tr class="<%= cycle("list0", "list1")%>">
     <td><%=h bin_type.name %></td>
     <td><%=h bin_type.description %></td>
-    <td><%=h bin_type.bin_barcode_format %></td>
-    <td><%=h bin_type.product_barcode_format %></td>
+    <td align="center"><%=h bin_type.maximum_load %></td>
+  
     <td class="action">
     <%= link_to 'Edit', edit_bin_type_path(bin_type) %>
     <%= link_to 'Destroy', bin_type, :confirm => 'Are you sure?', :method => :delete %></td>
