--- a/app/views/bin_types/show.html.erb
+++ b/app/views/bin_types/show.html.erb
@@ -28,6 +28,11 @@
   <%=h @bin_type.description %>
 </p>
 
+<p>
+  <b>Maximun Load:</b>
+  <%=h @bin_type.maximum_load %>
+</p>
+
 <br />
 <hr>
 <br />
