--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -72,6 +72,16 @@
     <%= f.label :prms_description_1 %><br />
     <%= f.text_field :prms_description_1 %>
   </p>
+
+  <p>
+    <%= f.label :part_cost %><br />
+    <%= f.text_field :part_cost %>
+  </p>
+
+  <p>
+    <%= f.label :part_weight %><br />
+    <%= f.text_field :part_weight %>
+  </p>
   
   
    <p>
