--- a/app/views/box_labels/show.html.erb
+++ b/app/views/box_labels/show.html.erb
@@ -1,7 +1,7 @@
 <br />
 
 <%= link_to 'View All', box_labels_path %> | 
-<%= link_to 'Print Barcode', print_barcode_box_label_path(@box_label), :confirm => "Are you sure?" %>
+<%= link_to 'Print Label', print_barcode_box_label_path(@box_label), :confirm => "Are you sure?" %>
 <br />
 
 <p>
