--- a/app/views/layouts/_ict_admin_menu.html.erb
+++ b/app/views/layouts/_ict_admin_menu.html.erb
@@ -49,6 +49,7 @@
 <a href="/bin_types">Bin Type</a>
 <a href="/bin_statuses">Bin Status</a>
 <a href="/cold_stores">On Hold Bin</a>
+<a href="/box_labels">Print label</a>
 </div>
 
 <!--4nd drop down menu -->
