--- a/app/views/layouts/_application_admin_menu.html.erb
+++ b/app/views/layouts/_application_admin_menu.html.erb
@@ -4,7 +4,7 @@
 <li><a href="#" rel="dropmenu1_b">Base Setup</a></li>
 <li><a href="#" rel="dropmenu2_b">User</a></li>
 <li><a href="#" rel="dropmenu3_b">Bin</a></li>
-<li><a href="#" rel="dropmenu7_b">Warehouse</a></li>
+<li><a href="#" rel="dropmenu4_b">Warehouse</a></li>
 <li><a href="/logout">Logout</a></li>
 </ul>
 </div>
@@ -13,25 +13,25 @@
 
 <!--1st drop down menu -->                                                   
 <div id="dropmenu1_b" class="dropmenudiv_b">
-<a href="/machines">Machines</a>
-
+  <a href="/machines">Machines</a>
 </div>
 
 
 <!--2nd drop down menu -->                                                
 <div id="dropmenu2_b" class="dropmenudiv_b" style="width: 150px;">
-<a href="/login_records">Logged in Accounts</a>
+  <a href="/login_records">Logged in Accounts</a>
 </div>
 
 
 <!--3nd drop down menu -->                                                
 <div id="dropmenu3_b" class="dropmenudiv_b" style="width: 150px;">
-<a href="/cold_stores/new">On Hold Bin</a>
+  <a href="/cold_stores/new">On Hold Bin</a>
+  <a href="/box_labels">Print Label</a>
 </div>
 
 
 <!--7nd drop down menu -->
-<div id="dropmenu7_b" class="dropmenudiv_b" style="width: 150px;">
+<div id="dropmenu4_b" class="dropmenudiv_b" style="width: 150px;">
 <a href="/warehouses">Warehouse</a>
 <a href="/warehouses/assign">Assignment</a>
 </div>
