--- a/app/views/machines/attach_product.html.erb
+++ b/app/views/machines/attach_product.html.erb
@@ -81,7 +81,11 @@
 	</tr>
 	<% end %>
 	<tr>
-		<td colspan="5"></td>
+	  <% if is_ict_admin? %>
+		  <td colspan="6"></td>
+    <% else %>
+      <td colspan="4"></td>
+    <% end %>
 		<td align="center">
 			<%= submit_tag "Update" %>
 		</td>
