--- a/app/views/flow/_buttons.html.erb
+++ b/app/views/flow/_buttons.html.erb
@@ -43,19 +43,19 @@
         <td>
           <%= link_to (image_tag("reject.png", :size => "100x100", :border => 0)), {:action => "select_reject_area", :id => c.id} %>
         </td>
-<!--         <%# if @machine.is_barcode_mode? %>
-          <td>
-          <%=# link_to_remote (image_tag("checkout.png", :size => "100x100", :border => 0)), :url => {:action => "checkout", :id => c.id},
-             #                     :confirm => "Are you sure ?",
-             #                     :html => {:id => "checkout_#{c.id.to_s}"},
-             #                     :loading => "running_checkout(#{c.id.to_s})",
-             #                     :complete => "show_checkout(#{c.id.to_s})"
+        <% if @machine.is_barcode_mode? %>
+          <td style="padding-left: 50px;">
+          <%= link_to_remote (image_tag("checkout.png", :size => "60x60", :border => 0)), :url => {:action => "checkout", :id => c.id},
+                                  :confirm => "Print label with quantity #{working_state.loaded_unit}/#{working_state.maximum_load} ?",
+                                  :html => {:id => "checkout_#{c.id.to_s}"},
+                                  :loading => "running_checkout(#{c.id.to_s})",
+                                  :complete => "show_checkout(#{c.id.to_s})"
            %>
             <div id="checkout_running_<%= c.id.to_s %>" style="display:none;">
-              <%#= image_tag("running.png", :size => "100x100", :border => 0) %>
+              <%= image_tag("running.png", :size => "100x100", :border => 0) %>
             </div>
          
           </td>
-        <%# end %> -->
+        <% end %>
       </tr>
     </table>
