Adjust select tag width in attach product page

--- a/app/views/bin_types/new.html.erb
+++ b/app/views/bin_types/new.html.erb
@@ -15,22 +15,22 @@
     <%= f.label :maximum_load %><br />
     <%= f.text_field :maximum_load %>
   </p>
-    <p>
-    <%= f.label :bin_barcode_format %><br />
-    <%= f.select :bin_barcode_format, BinType::BARCODE_FORMATS %>
+  <!--   <p>
+    <%#= f.label :bin_barcode_format %><br />
+    <%#= f.select :bin_barcode_format, BinType::BARCODE_FORMATS %>
   </p>
   <p>
-    <%= f.label :bin_barcode_text %><br />
-    <%= f.text_field :bin_barcode_text %>
+    <%#= f.label :bin_barcode_text %><br />
+    <%#= f.text_field :bin_barcode_text %>
   </p>
   <p>
-    <%= f.label :product_barcode_format %><br />
-    <%= f.select :product_barcode_format, BinType::BARCODE_FORMATS %>
+    <%#= f.label :product_barcode_format %><br />
+    <%#= f.select :product_barcode_format, BinType::BARCODE_FORMATS %>
   </p>
   <p>
-    <%= f.label :product_barcode_text %><br />
-    <%= f.text_field :product_barcode_text %>
-  </p>
+    <%#= f.label :product_barcode_text %><br />
+    <%#= f.text_field :product_barcode_text %>
+  </p> -->
   <p>
     <%= f.submit 'Create' %>
   </p>
