--- a/app/views/machines/edit.html.erb
+++ b/app/views/machines/edit.html.erb
@@ -27,7 +27,7 @@
 
    <p>
     <%= f.label :entry_category_id, "Data Entry Method" %><br />
-    <%= f.select :entry_category_id, [["TouchSreen", 0], ["Data Entry", 1], ["Barcode Mode", 2]] %>
+    <%= f.select :entry_category_id, [["TouchSreen", 0], ["Data Entry", 1], ["Barcode Mode", 2]] %> <em>Please make sure the machine is ready for the mode you want to change</em>
   </p>
 
    <p>
