--- a/app/views/box_labels/edit.html.erb
+++ b/app/views/box_labels/edit.html.erb
@@ -1,14 +1,24 @@
+<h1>Editing Label</h1>
 <br />
 
-<%= link_to 'View All', box_labels_path %> | <%= link_to 'Edit', edit_box_label_path(@box_label) %> | 
-<%= link_to 'Print Label', print_barcode_box_label_path(@box_label), :confirm => "Are you sure?" %>
+<%= link_to 'Back', @box_label %> 
+
 <br />
+
+<% form_for(@box_label) do |f| %>
+  <%= f.error_messages %>
+
+  <p>
+    <b>Label No<b/>
+    <%= f.text_field :code, :size => 40 %>
+  </p>
 
 <p>
-  <b>Label No:</b>
-  <%=h @box_label.code %>
+  <b>Quantity:</b>
+  <%= f.text_field :quantity %>
 </p>
-<p>
+
+  <p>
   <b>Part No:</b>
   <%=h @box_label.part_number %>
 </p>
@@ -24,10 +34,6 @@
 </p>
 
 <p>
-  <b>Quantity:</b>
-  <%=h @box_label.quantity %>
-</p>
-<p>
   <b>Boxed datetime:</b>
   <%=h @box_label.boxed_date_time.strftime("%d-%m-%Y %H:%M")  %>
 </p>
@@ -36,6 +42,13 @@
   <b>Operator:</b>
   <%=h @box_label.employee_name %>
 </p>
+  <p>
+    <%= f.submit 'Update' %>
+  </p>
+<% end %>
+
+
+
 
 
 
